--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section id="about" class="about">
             <div class="profile">
-                <img src="/assets/img/avatar.png" alt="Profilový obrázek">
+                <img src="assets/img/avatar.png" alt="Profilový obrázek">
             </div>
             <div class="bio">
                 <h1>O mně</h1>
